ch4-service/labs/lab02/ddoddo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: captainyun/ddoddo-market-frontend:v1.0
          ports:
            - containerPort: 3000
