ch4-service/labs/lab02/ddoddo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-server-service
spec:
  selector:
    app: backend-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # Ingress용으로 변경
